# atlas

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
apps/api/src/atlas_api/: __init__.py  main.py
apps/api/src/atlas_api/ai_providers/: __init__.py  base.py  local.py
apps/api/src/atlas_api/core/: __init__.py  config.py  dependencies.py
apps/api/tests/: test_answer_generation.py  test_api.py  test_context_assembly.py  test_documents.py  test_embedding_providers.py  test_llm_providers.py  test_pgvector_integration.py  test_query_rewrite.py  test_rag.py  test_reranking.py
apps/web/: eslint.config.mjs  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  styles.css
data/: README.md
docs/architecture/: atlas-v1.md  overview.md  roadmap.md  setup.md
docs/decisions/: adr-001-use-pgvector.md  adr-002-store-embeddings-separately.md  adr-003-add-query-rewriting.md  adr-004-add-reranking.md
docs/interview-guide/: 01-rag.md  02-embeddings.md  03-vector-databases.md  04-context-assembly.md  05-query-rewriting.md  06-evaluations.md  07-reranking.md
docs/learning-notes/: 00-ai-engineering-foundations.md  01-rag.md  02-vector-databases.md  04-reranking.md  README.md
evals/: README.md  rag_cases.json
examples/sample_docs/: README.md
migrations/: env.py
migrations/versions/: 20260619_0001_create_documents_table.py  20260619_0002_create_chunks_table.py  20260619_0003_create_chunk_embeddings_table.py  20260622_0004_use_pgvector_embeddings.py
scripts/: README.md  run_rag_evals.py
(+44 files in other folders)
