[project]
name = "atlas"
version = "0.1.0"
description = "Personal knowledge platform for learning AI Engineering."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = []
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.4.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
src = ["apps/api/src", "apps/api/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
mypy_path = "apps/api/src"
